# hbf

./: README.md  hbf.cabal
app/: Main.hs
src/: Instruction.hs  Interpreter.hs  Machine.hs  Parser.hs
