cabal-version:      3.0
name:               hbf
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             GoGim1
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable hbf
    import:           warnings
    main-is:          Main.hs
    other-modules:    Instruction,
                      Interpreter,
                      Machine,
                      Parser
    build-depends:    base ^>=4.17.0.0,
                      containers,
                      lens,
                      mtl,
                      parsec
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010
